--- a/ML_Assignment__standard_team.ipynb
+++ b/ML_Assignment__standard_team.ipynb
@@ -1586,7 +1586,7 @@
       },
       "source": [
         "\n",
-        "### When if data imbalance What will goes wrong\n",
+        "### (Option) When if data imbalance What will goes wrong\n",
         "\n",
         "- Skewed decision boundary: Model predicts the majority most of the time → low recall for minority.\n",
         "\n",
@@ -1855,7 +1855,6 @@
         "        (\"ros\", RandomOverSampler(random_state=SEED)),\n",
         "        (\"clf\", LogisticRegression(max_iter=2000, random_state=SEED))\n",
         "    ]),\n",
-        "\n",
         "    # 2) Linear SVM\n",
         "    \"SVC_linear_weighted\": ImbPipeline([\n",
         "        (\"scale\", StandardScaler()),\n",
@@ -2778,7 +2777,7 @@
         "    search = HalvingRandomSearchCV(\n",
         "        estimator=est,\n",
         "        param_distributions=grid if grid else {\"__noop__\": [None]},  # allow models with no tunables\n",
-        "        scoring=PRIMARY_SCORER,  # Pass the primary scorer as a string\n",
+        "        scoring=PRIMARY_SCORER,  # Pass the primary scorer as a string `fi_macro`\n",
         "        cv=cv,\n",
         "        random_state=SEED,\n",
         "        n_jobs=-1,\n",
