--- a/ML_Assignment__standard_team.ipynb
+++ b/ML_Assignment__standard_team.ipynb
@@ -1665,6 +1665,7 @@
         "- KNN\n",
         "- Decision Tree\n",
         "- Random Forest.\n",
+        "- Naive bayes\n",
         "\n",
         "> For each model, report accuracy, classification report, and plot confusion matrix."
       ]
@@ -1704,15 +1705,16 @@
         "# NOTE: log-loss scorer in sklearn is named \"neg_log_loss\" (maximized),\n",
         "# so we expose it as \"log_loss\" and flip the sign when reporting.\n",
         "scoring = {\n",
-        "    \"log_loss\": \"neg_log_loss\",          # will flip sign in summary\n",
+        "    \"f1_macro\": \"f1_macro\",\n",
+        "    \"f1_weighted\": \"f1_weighted\",\n",
+        "    # \"log_loss\": \"neg_log_loss\",          # will flip sign in summary\n",
         "    \"accuracy\": \"accuracy\",\n",
-        "    \"balanced_acc\": \"balanced_accuracy\",\n",
+        "    # \"balanced_acc\": \"balanced_accuracy\",\n",
         "    \"precision_macro\": \"precision_macro\",\n",
         "    \"precision_weighted\": \"precision_weighted\",\n",
         "    \"recall_macro\": \"recall_macro\",\n",
         "    \"recall_weighted\": \"recall_weighted\",\n",
-        "    \"f1_macro\": \"f1_macro\",\n",
-        "    \"f1_weighted\": \"f1_weighted\",\n",
+        "\n",
         "}\n"
       ]
     },
@@ -5094,7 +5096,6 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
