--- a/ML_Assignment__standard_team.ipynb
+++ b/ML_Assignment__standard_team.ipynb
@@ -1452,14 +1452,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wY5gcET-AaiU"
+        "id": "GWKMig8k87vL"
       },
       "source": [
         "\n",
+        "> Dataset are Imbalance\n",
         "\n",
-        "We address class imbalance by oversampling minority classes. Features are scaled for consistent ranges and PCA is applied to reduce dimensionality while retaining 95% variance.\n",
+        "#### When if data imbalance What will goes wrong\n",
         "\n",
-        "> When your classes are imbalanced (e.g., many “Normal”, few “Pathological”), most learners focus on the majority class and under-learn the minority. That creates great-looking accuracy but bad real-world performance on the rare, important cases\n"
+        "- Skewed decision boundary: Model predicts the majority most of the time → low recall for minority.\n",
+        "\n",
+        "- Misleading metrics: Overall accuracy/micro-F1 look high even if minority recall ≈ 0. ROC-AUC can look okay; PR (precision–recall) is more honest.\n",
+        "\n",
+        "- Unstable training: Few minority examples → high variance, overfitting (especially if you duplicate them).\n",
+        "\n",
+        "- Poor calibration: Probabilities get biased toward the majority prior.\n",
+        "\n",
+        "> Tiny example (990 zeros, 10 ones): always predicting “0” gives 99% accuracy, but minority recall = 0%."
       ]
     },
     {
@@ -2309,26 +2318,6 @@
       ],
       "source": [
         "data_train_test.y_train"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "GWKMig8k87vL"
-      },
-      "source": [
-        "\n",
-        "### (Option) When if data imbalance What will goes wrong\n",
-        "\n",
-        "- Skewed decision boundary: Model predicts the majority most of the time → low recall for minority.\n",
-        "\n",
-        "- Misleading metrics: Overall accuracy/micro-F1 look high even if minority recall ≈ 0. ROC-AUC can look okay; PR (precision–recall) is more honest.\n",
-        "\n",
-        "- Unstable training: Few minority examples → high variance, overfitting (especially if you duplicate them).\n",
-        "\n",
-        "- Poor calibration: Probabilities get biased toward the majority prior.\n",
-        "\n",
-        "> Tiny example (990 zeros, 10 ones): always predicting “0” gives 99% accuracy, but minority recall = 0%."
       ]
     },
     {
