--- a/ทำดาของเตรียมข้อมูล.ipynb
+++ b/ทำดาของเตรียมข้อมูล.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "jHnoyTWhVhpL"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "BEamvDpQV6qi"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "DveemaWDV7Z1"
       },
@@ -79,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "5zvsfA4EV-qG"
       },
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "GZb05x1XWA9V"
       },
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "sWuXeM05WCuI"
       },
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "OXU440ifWJcX"
       },
@@ -142,13 +142,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ph_vCHtaWNmN",
-        "outputId": "fdbcb186-e993-4ffc-e12e-e0ab2ef5a265"
+        "outputId": "528408e1-d7e7-4be0-9018-78cdf40bca64"
       },
       "outputs": [
         {
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "GkevvrrqWQid"
       },
@@ -184,14 +184,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 981
         },
         "id": "Vib5AsoQWTMg",
-        "outputId": "2b99448f-5ef9-4bca-991b-0d73643f6933"
+        "outputId": "d4ce4ed2-70f0-4fe4-e2e9-a587e56216aa"
       },
       "outputs": [
         {
@@ -293,7 +293,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fee87bd7-632f-4d47-b2df-d47c387928d4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2050e841-355c-452f-95df-20fbfdb4517c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -607,7 +607,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fee87bd7-632f-4d47-b2df-d47c387928d4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2050e841-355c-452f-95df-20fbfdb4517c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -659,12 +659,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-fee87bd7-632f-4d47-b2df-d47c387928d4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2050e841-355c-452f-95df-20fbfdb4517c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-fee87bd7-632f-4d47-b2df-d47c387928d4');\n",
+              "        const element = document.querySelector('#df-2050e841-355c-452f-95df-20fbfdb4517c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -684,8 +684,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-db20a178-d8ad-4a3a-96db-ed4a32765fd0\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-db20a178-d8ad-4a3a-96db-ed4a32765fd0')\"\n",
+              "    <div id=\"df-c787b8e1-eea9-467e-ab2a-d770d96814b7\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c787b8e1-eea9-467e-ab2a-d770d96814b7')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -804,14 +804,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-db20a178-d8ad-4a3a-96db-ed4a32765fd0 button');\n",
+              "            document.querySelector('#df-c787b8e1-eea9-467e-ab2a-d770d96814b7 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_b06d6e41-8244-4cfb-b99f-20775bdc0bff\">\n",
+              "  <div id=\"id_5960ca6d-1c5c-4fb0-87f9-10b1e9f865e8\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -855,7 +855,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_b06d6e41-8244-4cfb-b99f-20775bdc0bff button.colab-df-generate');\n",
+              "        document.querySelector('#id_5960ca6d-1c5c-4fb0-87f9-10b1e9f865e8 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -929,13 +929,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcmL62vmWZsi",
-        "outputId": "a5004a5b-0e5e-4acd-cf59-b32aadc903ce"
+        "outputId": "edf99eeb-099c-401e-dee6-53bfc8a046db"
       },
       "outputs": [
         {
@@ -963,13 +963,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ggXeFlsCW22m",
-        "outputId": "fd968a41-62bc-4c73-8494-971d5bd4a3d7"
+        "outputId": "5c170fdb-89aa-43fe-c64d-e30f9696b995"
       },
       "outputs": [
         {
@@ -998,13 +998,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UhZS3q8JW4wL",
-        "outputId": "4b3d544e-70e8-41a8-be84-50ec433d452b"
+        "outputId": "df8729f6-a547-4568-b6f6-65778e197bbf"
       },
       "outputs": [
         {
@@ -1025,13 +1025,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8sXejw--XPUc",
-        "outputId": "1e9cef58-1144-4659-ecf7-60bebb13f4d3"
+        "outputId": "3963c5eb-97ed-4968-c0ab-e0d9fa92b942"
       },
       "outputs": [
         {
@@ -1053,13 +1053,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Yuv0jqbXX_q",
-        "outputId": "54d332f7-7eca-4e0d-855a-e5b50b2f8f12"
+        "outputId": "f90b7029-5dc5-4e33-c461-bd6445571300"
       },
       "outputs": [
         {
@@ -1082,14 +1082,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 425
+          "height": 415
         },
         "id": "F7KyhPwQXYZE",
-        "outputId": "18b8e8b1-30fb-41ae-da00-da31b034c704"
+        "outputId": "c448f1b5-82c2-44be-fc34-9333869f665b"
       },
       "outputs": [
         {
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "BIpBNrJvXp8T"
       },
@@ -1136,13 +1136,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "np3jWVX6X0R-",
-        "outputId": "6d4cf484-b46e-425d-a55d-28340ddb075b"
+        "outputId": "9abcd08f-9d45-4f02-e429-9379040b39cc"
       },
       "outputs": [
         {
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "ExdEylsrYG6Z"
       },
@@ -1197,7 +1197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "Ffgv26muaS9u"
       },
@@ -1217,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "ed2sMAvGLbmM"
       },
@@ -1300,7 +1300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "STDq6IqIQaSF"
       },
@@ -1336,8 +1336,6 @@
         "    \"min_samples_leaf\" : randint(2,50),\n",
         "    \"max_leaf_nodes\" : randint(1,50),\n",
         "    \"min_samples_split\" : randint(2,50),\n",
-        "    \"max_depth\" : randint(1,50),\n",
-        "\n",
         "\n",
         "}\n",
         "\n",
@@ -1376,16 +1374,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee338742-e3a8-4731-e2bc-12501258b00e"
+        "outputId": "3af2584e-ec9f-4602-e451-dbf707e5e340"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 80 candidates, totalling 400 fits\n",
-            "{'max_depth': 30, 'max_leaf_nodes': 38, 'min_samples_leaf': 3, 'min_samples_split': 22, 'n_estimators': 360}\n"
+            "{'max_leaf_nodes': 49, 'min_samples_leaf': 3, 'min_samples_split': 2, 'n_estimators': 503}\n"
           ]
         }
       ]
@@ -1401,7 +1399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "VqKZdDGfGvgx"
       },
@@ -1431,21 +1429,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "u8VtIm0l9rzV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b29cc7fa-8a2b-4185-f824-de1ac075359a"
+        "outputId": "6b920da5-e680-4439-f2a1-09b051b325c8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "F1-macro: 0.8740611283878909\n",
-            "Balanced accuracy: 0.897531969945763\n"
+            "F1-macro: 0.8903722478836288\n",
+            "Balanced accuracy: 0.892098323132806\n"
           ]
         }
       ],
@@ -1456,22 +1454,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "H1Tdu4IA9rmb"
-      },
-      "source": []
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "UmFIHkItMATF",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 109
         },
-        "outputId": "2a99d339-bb6d-4c46-9470-ff7fe4feec82"
+        "outputId": "53d5c954-dd83-432d-fc52-a25a74002a40"
       },
       "outputs": [
         {
@@ -1494,7 +1485,7 @@
         "    #\"bootstrap\": [True, False],               # เปิด/ปิด bootstrap\n",
         "    #\"class_weight\": [None, \"balanced\"]        # ถ้า class ไม่สมดุล ลอง 'balanced'\n",
         "    # ถ้าข้อมูลใหญ่มากและใช้ bootstrap=True จะลอง \"max_samples\": uniform(0.5, 0.5) ก็ได้\n",
-        "}\n",
+        "#}\n",
         "\n",
         "# 2) ตั้งค่า CV: StratifiedKFold + shuffle เพื่อสุ่มสับข้อมูลแต่ละ fold\n",
         "#cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
@@ -1520,32 +1511,14 @@
         "#search.fit(X, y)\n",
         "#print(\"Best params:\", search.best_params_)\n",
         "##print(\"Best CV ROC-AUC:\", search.best_score_)\n",
-        "best_model = search.best_estimator_"
+        "#best_model = search.best_estimator_"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "8AK8n3Xey54_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "feature_selection"
-      ],
-      "metadata": {
-        "id": "Llo5NBr7yv80"
-      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMd3qL7mK5MWCkLxv2S3KG6",
+      "authorship_tag": "ABX9TyMbCeo1QR1XaWrO+kW8S5nP",
       "include_colab_link": true
     },
     "kernelspec": {
