add method f1-macro

--- a/ทำดาของเตรียมข้อมูล.ipynb
+++ b/ทำดาของเตรียมข้อมูล.ipynb
@@ -148,14 +148,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ph_vCHtaWNmN",
-        "outputId": "528408e1-d7e7-4be0-9018-78cdf40bca64"
+        "outputId": "ccc9fce6-92cd-487e-d0b1-5af559f55c77"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Using Colab cache for faster access to the 'fetal-health-classification' dataset.\n"
+            "Downloading from https://www.kaggle.com/api/v1/datasets/download/andrewmvd/fetal-health-classification?dataset_version_number=1...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 45.8k/45.8k [00:00<00:00, 12.9MB/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting files...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -191,7 +212,7 @@
           "height": 981
         },
         "id": "Vib5AsoQWTMg",
-        "outputId": "d4ce4ed2-70f0-4fe4-e2e9-a587e56216aa"
+        "outputId": "41cef159-18b3-452a-a134-86bb99cf3f71"
       },
       "outputs": [
         {
@@ -293,7 +314,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2050e841-355c-452f-95df-20fbfdb4517c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cea9d2fa-9689-4882-99c7-df70d46f577c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -607,7 +628,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2050e841-355c-452f-95df-20fbfdb4517c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cea9d2fa-9689-4882-99c7-df70d46f577c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -659,12 +680,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2050e841-355c-452f-95df-20fbfdb4517c button.colab-df-convert');\n",
+              "        document.querySelector('#df-cea9d2fa-9689-4882-99c7-df70d46f577c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2050e841-355c-452f-95df-20fbfdb4517c');\n",
+              "        const element = document.querySelector('#df-cea9d2fa-9689-4882-99c7-df70d46f577c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -684,8 +705,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c787b8e1-eea9-467e-ab2a-d770d96814b7\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c787b8e1-eea9-467e-ab2a-d770d96814b7')\"\n",
+              "    <div id=\"df-b5df3597-7363-4a39-af97-0d506a3b21d0\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b5df3597-7363-4a39-af97-0d506a3b21d0')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -804,14 +825,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c787b8e1-eea9-467e-ab2a-d770d96814b7 button');\n",
+              "            document.querySelector('#df-b5df3597-7363-4a39-af97-0d506a3b21d0 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_5960ca6d-1c5c-4fb0-87f9-10b1e9f865e8\">\n",
+              "  <div id=\"id_c7adf4fa-7c60-4ea4-84c7-3a756bfa6158\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -855,7 +876,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_5960ca6d-1c5c-4fb0-87f9-10b1e9f865e8 button.colab-df-generate');\n",
+              "        document.querySelector('#id_c7adf4fa-7c60-4ea4-84c7-3a756bfa6158 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -935,7 +956,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcmL62vmWZsi",
-        "outputId": "edf99eeb-099c-401e-dee6-53bfc8a046db"
+        "outputId": "84187529-43fc-4a13-8522-42ec7c7c6005"
       },
       "outputs": [
         {
@@ -969,7 +990,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ggXeFlsCW22m",
-        "outputId": "5c170fdb-89aa-43fe-c64d-e30f9696b995"
+        "outputId": "56056d84-692f-42eb-b845-638e5c47746a"
       },
       "outputs": [
         {
@@ -1004,7 +1025,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UhZS3q8JW4wL",
-        "outputId": "df8729f6-a547-4568-b6f6-65778e197bbf"
+        "outputId": "027ff0df-3e4e-48bf-caa0-f47a6a29a4b3"
       },
       "outputs": [
         {
@@ -1031,7 +1052,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8sXejw--XPUc",
-        "outputId": "3963c5eb-97ed-4968-c0ab-e0d9fa92b942"
+        "outputId": "801995c6-f70a-46fa-f528-dc0449fea9cc"
       },
       "outputs": [
         {
@@ -1059,7 +1080,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Yuv0jqbXX_q",
-        "outputId": "f90b7029-5dc5-4e33-c461-bd6445571300"
+        "outputId": "99e6bdd3-485d-46a3-da16-957d8dcca9aa"
       },
       "outputs": [
         {
@@ -1086,10 +1107,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 415
+          "height": 496
         },
         "id": "F7KyhPwQXYZE",
-        "outputId": "c448f1b5-82c2-44be-fc34-9333869f665b"
+        "outputId": "a62e2957-57d4-4a44-da36-0e86b7a7fe44"
       },
       "outputs": [
         {
@@ -1142,7 +1163,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "np3jWVX6X0R-",
-        "outputId": "9abcd08f-9d45-4f02-e429-9379040b39cc"
+        "outputId": "ac5c3999-8247-4dd1-8d85-8e4033bc42a3"
       },
       "outputs": [
         {
@@ -1364,116 +1385,88 @@
         "    return_train_score=False,\n",
         "\n",
         ")\n",
+        "\n",
         "search.fit(X_train, y_train)\n",
+        "print(\"Best params:\", search.best_params_)\n",
+        "print(\"Best CV f1_macro:\", search.best_score_)\n",
+        "\n",
+        "# ประเมินบน test set (ที่กันไว้ตั้งแต่ต้น)\n",
         "best_model = search.best_estimator_\n",
-        "best_params = search.best_params_\n",
-        "print(best_params)"
+        "y_pred = best_model.predict(X_test)\n",
+        "print(\"Test F1_macro:\", f1_score(y_test, y_pred, average=\"macro\"))\n",
+        "print(\"Test Balanced Acc.:\", balanced_accuracy_score(y_test, y_pred))\n",
+        "print(classification_report(y_test, y_pred))"
       ],
       "metadata": {
         "id": "7cq3fDCqDecG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3af2584e-ec9f-4602-e451-dbf707e5e340"
+        "outputId": "7b018d37-b733-41fd-8e01-f0d8e62c8d84"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 80 candidates, totalling 400 fits\n",
-            "{'max_leaf_nodes': 49, 'min_samples_leaf': 3, 'min_samples_split': 2, 'n_estimators': 503}\n"
+            "Best params: {'max_leaf_nodes': 49, 'min_samples_leaf': 3, 'min_samples_split': 2, 'n_estimators': 503}\n",
+            "Best CV f1_macro: 0.8749683136005844\n",
+            "Test F1_macro: 0.8903722478836288\n",
+            "Test Balanced Acc.: 0.892098323132806\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "         1.0       0.96      0.96      0.96       330\n",
+            "         2.0       0.76      0.78      0.77        58\n",
+            "         3.0       0.94      0.94      0.94        35\n",
+            "\n",
+            "    accuracy                           0.93       423\n",
+            "   macro avg       0.89      0.89      0.89       423\n",
+            "weighted avg       0.93      0.93      0.93       423\n",
+            "\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "wlftZcIa46UJ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 24,
-      "metadata": {
-        "id": "VqKZdDGfGvgx"
-      },
-      "outputs": [],
-      "source": [
-        "best_params = {\n",
-        "    \"max_leaf_nodes\": 49,\n",
-        "    \"min_samples_leaf\" : 3,\n",
-        "    \"min_samples_leaf\": 5,\n",
-        "    \"n_estimators\": 503,\n",
-        "}\n",
-        "\n",
-        "# --- วิธีที่ 1: สร้างโมเดลใหม่ พร้อม base settings ที่ใช้อยู่ ---\n",
-        "rf_final = RandomForestClassifier(\n",
-        "    **best_params,\n",
-        "    random_state=42,\n",
-        "    n_jobs=-1,\n",
-        "    class_weight=\"balanced\",   # ถ้าใช้ SMOTE ใน pipeline ลองเทียบกับ None ได้\n",
-        "    max_features=\"sqrt\",\n",
-        "    bootstrap=True,\n",
-        "    oob_score=True,\n",
-        "    criterion=\"gini\",\n",
-        ")\n",
-        "rf_final.fit(X_train, y_train)\n",
-        "y_pred = search.predict(X_test)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 25,
-      "metadata": {
-        "id": "u8VtIm0l9rzV",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6b920da5-e680-4439-f2a1-09b051b325c8"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "F1-macro: 0.8903722478836288\n",
-            "Balanced accuracy: 0.892098323132806\n"
-          ]
-        }
-      ],
-      "source": [
-        "from sklearn.metrics import f1_score, balanced_accuracy_score\n",
-        "print(\"F1-macro:\", f1_score(y_test, y_pred, average=\"macro\"))\n",
-        "print(\"Balanced accuracy:\", balanced_accuracy_score(y_test, y_pred))\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 26,
       "metadata": {
-        "id": "UmFIHkItMATF",
+        "id": "VqKZdDGfGvgx",
+        "outputId": "25b2a14a-13c8-4c50-b55d-960051feb9a7",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 109
-        },
-        "outputId": "53d5c954-dd83-432d-fc52-a25a74002a40"
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "unmatched '}' (ipython-input-734416005.py, line 11)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-734416005.py\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    }\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched '}'\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OOB F1_macro: 0.871602015427675\n",
+            "OOB Balanced Acc.: 0.8952406931130334\n"
           ]
         }
       ],
+      "source": [
+        "\n",
+        "oob_proba = best_model.oob_decision_function_\n",
+        "valid = ~np.isnan(oob_proba).any(axis=1)  # กันกรณีบางแถวไม่มี OOB votes พอ\n",
+        "y_true = np.asarray(y_train)[valid]\n",
+        "oob_pred = best_model.classes_[oob_proba[valid].argmax(axis=1)]\n",
+        "\n",
+        "print(\"OOB F1_macro:\", f1_score(y_true, oob_pred, average=\"macro\"))\n",
+        "print(\"OOB Balanced Acc.:\", balanced_accuracy_score(y_true, oob_pred))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UmFIHkItMATF"
+      },
+      "outputs": [],
       "source": [
         "# 1) กำหนดพื้นที่การค้นหา (search space)\n",
         "#param_dist = {\n",
@@ -1518,7 +1511,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbCeo1QR1XaWrO+kW8S5nP",
+      "authorship_tag": "ABX9TyOY6t74RhQWusyhSeTPdxwd",
       "include_colab_link": true
     },
     "kernelspec": {
