--- a/feature_selection_(ANOVA).ipynb
+++ b/feature_selection_(ANOVA).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNetjLzzhzHw8BLZT70bIHA",
+      "authorship_tag": "ABX9TyNszQnanjMQ2hzYnSXVSJx3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "3x3D6Iw6Rrpt"
       },
@@ -76,9 +76,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b04KMFrRTg07",
-        "outputId": "b5518c91-3858-45b7-b0e6-f03a802b27e5"
+        "outputId": "beba3236-a955-4592-8e3c-2c892f3fed19"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,8 @@
       "cell_type": "code",
       "source": [
         "pipe = Pipeline(steps=[\n",
-        "    (\"sel\", SelectKBest(score_func=f_classif )),\n",
+        "    (\"var\", VarianceThreshold(threshold=0.0)),           # optional — ตัดฟีเจอร์คงที่\n",
+        "    (\"sel\", SelectKBest(score_func=f_classif)),    # optional — ถ้ามีฟีเจอร์เยอะมาก\n",
         "    (\"clf\", RandomForestClassifier(\n",
         "        random_state=42,\n",
         "        n_jobs=-1,\n",
@@ -115,7 +116,7 @@
       "metadata": {
         "id": "HY-r0rECTlxO"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +146,7 @@
       "metadata": {
         "id": "6slpbIxcT6PU"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,28 +168,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Kld-AFkUKb5",
-        "outputId": "e1e5c877-3ffc-4bcc-ec70-8088cf368ae6"
+        "outputId": "56221544-2704-459e-a566-b55f3f4525ad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 21 candidates, totalling 105 fits\n",
-            "Best params: {'sel__k': 10}\n",
-            "Best CV f1_macro: 0.8901198852820891\n",
-            "Test F1_macro: 0.8566930441454191\n",
-            "Test Balanced Acc.: 0.8861893092952925\n",
+            "Best params: {'sel__k': 16}\n",
+            "Best CV f1_macro: 0.8764688408017968\n",
+            "Test F1_macro: 0.8544018115745792\n",
+            "Test Balanced Acc.: 0.8991223975806374\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           1       0.97      0.93      0.95       332\n",
-            "           2       0.71      0.81      0.76        59\n",
-            "           3       0.82      0.91      0.86        35\n",
+            "           1       0.98      0.92      0.95       332\n",
+            "           2       0.68      0.86      0.76        59\n",
+            "           3       0.80      0.91      0.85        35\n",
             "\n",
             "    accuracy                           0.91       426\n",
-            "   macro avg       0.83      0.89      0.86       426\n",
-            "weighted avg       0.92      0.91      0.92       426\n",
+            "   macro avg       0.82      0.90      0.85       426\n",
+            "weighted avg       0.92      0.91      0.91       426\n",
             "\n"
           ]
         }
@@ -209,15 +210,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TVabM_mUVUSP",
-        "outputId": "3b13a3a0-f54b-4444-ec30-5f937be5622b"
+        "outputId": "b3ec950c-a82c-4b6a-85c3-61b67d7205a0"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Selected 10 features (k): ['baseline value', 'accelerations', 'prolongued_decelerations', 'abnormal_short_term_variability', 'mean_value_of_short_term_variability', 'percentage_of_time_with_abnormal_long_term_variability', 'histogram_mode', 'histogram_mean', 'histogram_median', 'histogram_variance']\n"
+            "Selected 16 features (k): ['baseline value', 'accelerations', 'uterine_contractions', 'light_decelerations', 'prolongued_decelerations', 'abnormal_short_term_variability', 'mean_value_of_short_term_variability', 'percentage_of_time_with_abnormal_long_term_variability', 'mean_value_of_long_term_variability', 'histogram_width', 'histogram_min', 'histogram_mode', 'histogram_mean', 'histogram_median', 'histogram_variance', 'histogram_tendency']\n"
           ]
         }
       ]
@@ -242,17 +243,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp70eaXpV8vv",
-        "outputId": "47a92e90-a37c-4b5c-8194-c5bf2fd020ad"
+        "outputId": "cbbd05e2-6aea-43ef-9ea0-a065daad63f2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "OOB micro-accuracy (clf.oob_score_): 0.9317647058823529\n",
-            "OOB F1_macro: 0.8909376601577121\n",
-            "OOB Balanced Acc.: 0.918110646911327\n"
+            "OOB micro-accuracy (clf.oob_score_): 0.9241176470588235\n",
+            "OOB F1_macro: 0.8823946186276251\n",
+            "OOB Balanced Acc.: 0.9192683297357623\n"
           ]
         }
       ]
