--- a/ทำดาของเตรียมข้อมูล.ipynb
+++ b/ทำดาของเตรียมข้อมูล.ipynb
@@ -148,35 +148,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ph_vCHtaWNmN",
-        "outputId": "ccc9fce6-92cd-487e-d0b1-5af559f55c77"
+        "outputId": "319c2c3a-cc05-4bd4-a1b1-13306a52c262"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/andrewmvd/fetal-health-classification?dataset_version_number=1...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 45.8k/45.8k [00:00<00:00, 12.9MB/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting files...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
+            "Using Colab cache for faster access to the 'fetal-health-classification' dataset.\n"
           ]
         }
       ],
@@ -212,7 +191,7 @@
           "height": 981
         },
         "id": "Vib5AsoQWTMg",
-        "outputId": "41cef159-18b3-452a-a134-86bb99cf3f71"
+        "outputId": "e366e699-859e-4e4e-b59c-0872f93a774f"
       },
       "outputs": [
         {
@@ -314,7 +293,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cea9d2fa-9689-4882-99c7-df70d46f577c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-69192e28-f85b-411d-a2e5-e4b9b40ee615\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -628,7 +607,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cea9d2fa-9689-4882-99c7-df70d46f577c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-69192e28-f85b-411d-a2e5-e4b9b40ee615')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -680,12 +659,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cea9d2fa-9689-4882-99c7-df70d46f577c button.colab-df-convert');\n",
+              "        document.querySelector('#df-69192e28-f85b-411d-a2e5-e4b9b40ee615 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cea9d2fa-9689-4882-99c7-df70d46f577c');\n",
+              "        const element = document.querySelector('#df-69192e28-f85b-411d-a2e5-e4b9b40ee615');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -705,8 +684,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b5df3597-7363-4a39-af97-0d506a3b21d0\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b5df3597-7363-4a39-af97-0d506a3b21d0')\"\n",
+              "    <div id=\"df-2d43f4d2-585d-49ee-ad30-782905399a55\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2d43f4d2-585d-49ee-ad30-782905399a55')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -825,14 +804,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b5df3597-7363-4a39-af97-0d506a3b21d0 button');\n",
+              "            document.querySelector('#df-2d43f4d2-585d-49ee-ad30-782905399a55 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_c7adf4fa-7c60-4ea4-84c7-3a756bfa6158\">\n",
+              "  <div id=\"id_3948a68a-7117-4223-961e-23b5d54bb01f\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -876,7 +855,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c7adf4fa-7c60-4ea4-84c7-3a756bfa6158 button.colab-df-generate');\n",
+              "        document.querySelector('#id_3948a68a-7117-4223-961e-23b5d54bb01f button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -956,7 +935,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zcmL62vmWZsi",
-        "outputId": "84187529-43fc-4a13-8522-42ec7c7c6005"
+        "outputId": "e88e8dd4-a35b-4670-b864-39afc5a8c1c3"
       },
       "outputs": [
         {
@@ -990,7 +969,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ggXeFlsCW22m",
-        "outputId": "56056d84-692f-42eb-b845-638e5c47746a"
+        "outputId": "fd93504f-7c41-48d7-afe1-fa01cd8d5f9c"
       },
       "outputs": [
         {
@@ -1025,7 +1004,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UhZS3q8JW4wL",
-        "outputId": "027ff0df-3e4e-48bf-caa0-f47a6a29a4b3"
+        "outputId": "d054b1d3-57cf-46b7-a96c-0244ab95e979"
       },
       "outputs": [
         {
@@ -1052,7 +1031,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8sXejw--XPUc",
-        "outputId": "801995c6-f70a-46fa-f528-dc0449fea9cc"
+        "outputId": "13cbcf45-f3ec-46cc-f4f7-800dee0656f5"
       },
       "outputs": [
         {
@@ -1080,7 +1059,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Yuv0jqbXX_q",
-        "outputId": "99e6bdd3-485d-46a3-da16-957d8dcca9aa"
+        "outputId": "f1b35b4f-e3e6-42b3-d658-221bbcd682c0"
       },
       "outputs": [
         {
@@ -1110,7 +1089,7 @@
           "height": 496
         },
         "id": "F7KyhPwQXYZE",
-        "outputId": "a62e2957-57d4-4a44-da36-0e86b7a7fe44"
+        "outputId": "926290df-6bb2-4628-a660-ca3820902853"
       },
       "outputs": [
         {
@@ -1163,7 +1142,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "np3jWVX6X0R-",
-        "outputId": "ac5c3999-8247-4dd1-8d85-8e4033bc42a3"
+        "outputId": "72130cb7-4d25-4721-b102-5a9d8f89e379"
       },
       "outputs": [
         {
@@ -1385,7 +1364,6 @@
         "    return_train_score=False,\n",
         "\n",
         ")\n",
-        "\n",
         "search.fit(X_train, y_train)\n",
         "print(\"Best params:\", search.best_params_)\n",
         "print(\"Best CV f1_macro:\", search.best_score_)\n",
@@ -1395,16 +1373,16 @@
         "y_pred = best_model.predict(X_test)\n",
         "print(\"Test F1_macro:\", f1_score(y_test, y_pred, average=\"macro\"))\n",
         "print(\"Test Balanced Acc.:\", balanced_accuracy_score(y_test, y_pred))\n",
-        "print(classification_report(y_test, y_pred))"
+        "print(classification_report(y_test, y_pred))\n"
       ],
       "metadata": {
         "id": "7cq3fDCqDecG",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b018d37-b733-41fd-8e01-f0d8e62c8d84"
+        "outputId": "9673b992-c3cc-450e-b0fc-bb104655716a"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,39 +1408,73 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 26,
+      "cell_type": "markdown",
+      "source": [
+        "\n"
+      ],
       "metadata": {
-        "id": "VqKZdDGfGvgx",
-        "outputId": "25b2a14a-13c8-4c50-b55d-960051feb9a7",
+        "id": "wlftZcIa46UJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "id": "VqKZdDGfGvgx"
+      },
+      "outputs": [],
+      "source": [
+        "best_params = {\n",
+        "    \"max_leaf_nodes\": 49,\n",
+        "    \"min_samples_leaf\" : 3,\n",
+        "    \"min_samples_split\": 2,\n",
+        "    \"n_estimators\": 503,\n",
+        "}\n",
+        "\n",
+        "# --- วิธีที่ 1: สร้างโมเดลใหม่ พร้อม base settings ที่ใช้อยู่ ---\n",
+        "rf_final = RandomForestClassifier(\n",
+        "    **best_params,\n",
+        "    random_state=42,\n",
+        "    n_jobs=-1,\n",
+        "    class_weight=\"balanced\",   # ถ้าใช้ SMOTE ใน pipeline ลองเทียบกับ None ได้\n",
+        "    max_features=\"sqrt\",\n",
+        "    bootstrap=True,\n",
+        "    oob_score=True,\n",
+        "    criterion=\"gini\",\n",
+        ")\n",
+        "rf_final.fit(X_train, y_train)\n",
+        "y_pred = search.predict(X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "u8VtIm0l9rzV",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47519aa3-92de-4c63-ab3e-33c631a0e278"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "OOB F1_macro: 0.871602015427675\n",
-            "OOB Balanced Acc.: 0.8952406931130334\n"
+            "F1-macro: 0.8903722478836288\n",
+            "Balanced accuracy: 0.892098323132806\n"
           ]
         }
       ],
       "source": [
-        "\n",
-        "oob_proba = best_model.oob_decision_function_\n",
-        "valid = ~np.isnan(oob_proba).any(axis=1)  # กันกรณีบางแถวไม่มี OOB votes พอ\n",
-        "y_true = np.asarray(y_train)[valid]\n",
-        "oob_pred = best_model.classes_[oob_proba[valid].argmax(axis=1)]\n",
-        "\n",
-        "print(\"OOB F1_macro:\", f1_score(y_true, oob_pred, average=\"macro\"))\n",
-        "print(\"OOB Balanced Acc.:\", balanced_accuracy_score(y_true, oob_pred))"
+        "from sklearn.metrics import f1_score, balanced_accuracy_score\n",
+        "print(\"F1-macro:\", f1_score(y_test, y_pred, average=\"macro\"))\n",
+        "print(\"Balanced accuracy:\", balanced_accuracy_score(y_test, y_pred))\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "UmFIHkItMATF"
       },
@@ -1511,7 +1523,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOY6t74RhQWusyhSeTPdxwd",
+      "authorship_tag": "ABX9TyOuP0PNupuRBRPX3F1HjmpT",
       "include_colab_link": true
     },
     "kernelspec": {
